# wan-data

./: .gitignore  .gitmodules  README.md  pyproject.toml
ckpts/: README.md
configs/: preprocess.example.yaml
scripts/: download_ckpts.py  install_full_mirror.sh  preprocess.py  test_sam3.py
scripts/integrations/: run_sam_body4d.py
wan_data/: __init__.py  cli.py  config.py  pipeline.py
wan_data/extractors/: __init__.py  background.py  masklets.py  portrait.py
wan_data/io/: __init__.py  image_ops.py  video.py
